Updated dialogs and popup, added new launcher icon

--- a/app/src/main/res/layout-land/activity_launch_pad.xml
+++ b/app/src/main/res/layout-land/activity_launch_pad.xml
@@ -474,10 +474,29 @@
                 android:visibility="gone"
                 android:onClick="OpenStore"
                 android:clickable="true"/>
-            <ListView android:id="@+id/sample_listview"
+            <TextView android:id="@+id/new_sample_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/sample_lib_button_bar"
+                android:layout_gravity="bottom"
+                android:padding="4dp"
+                android:drawableStart="@drawable/ic_av_my_library_add_40dp"
+                android:drawableLeft="@drawable/ic_av_my_library_add_40dp"
+                android:drawablePadding="8dp"
+                android:layout_margin="16dp"
+                android:maxWidth="250dp"
+                android:text="@string/create_sample_button_text"
+                android:textColor="@color/text_primary_light"
+                android:textSize="20sp"
+                android:textAlignment="center"
+                android:background="@drawable/rounded_corner_accent"
+                android:visibility="visible"
+                android:onClick="AddSampleClick"
+                android:clickable="true"/>
+            <ListView android:id="@+id/sample_listview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/new_sample_button"
                 android:layout_weight="1"
                 android:choiceMode="singleChoice"
                 android:visibility="visible"/>
