--- a/app/src/main/res/layout/new_sample_popup.xml
+++ b/app/src/main/res/layout/new_sample_popup.xml
@@ -4,14 +4,17 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
-<LinearLayout
-    android:orientation="vertical" android:layout_width="wrap_content"
+<LinearLayout android:id="@+id/new_image_popup"
+    android:orientation="vertical"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_centerInParent="true"
-    android:gravity="center_horizontal"
     android:background="@drawable/popup_background"
-    android:padding="16dp"
-    android:id="@+id/new_image_popup">
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:gravity="end">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -23,13 +26,6 @@
             android:textSize="20sp"
             android:textColor="#FFFFFF"
             android:text="@string/new_sample_popup_title"/>
-        <ImageButton
-            android:id="@+id/popup_close_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:background="@drawable/ic_action_navigation_close"
-            android:onClick="PopupCloseButtonClick"/>
     </LinearLayout>
     <TextView
         android:id="@+id/music_library_button"
@@ -46,8 +42,6 @@
         android:background="@drawable/button_transparent"
         android:padding="4dp"
         android:layout_marginTop="16dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:clickable="true"
         android:onClick="PopupLibraryButtonClick"/>
     <TextView
@@ -64,9 +58,6 @@
         android:drawablePadding="8dp"
         android:background="@drawable/button_transparent"
         android:padding="4dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
         android:clickable="true"
         android:onClick="PopupRecordButtonClick"/>
 </LinearLayout>
