--- a/app/src/main/res/layout/sample_file_name_prompt.xml
+++ b/app/src/main/res/layout/sample_file_name_prompt.xml
@@ -7,12 +7,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:hint="@string/sample_name_message"
-    android:layout_marginBottom="6dp"/>
+    android:layout_marginBottom="6dp"
+    android:textColor="@color/text_primary_light"/>
     <TextView
         android:id="@+id/file_name_preview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/sample_name_text"/>
+        android:layout_below="@id/sample_name_text"
+        android:textColor="@color/text_primary_light"/>
     <TextView
         android:id="@+id/file_exists_textview"
         android:layout_width="wrap_content"
