Added sample info display and fixed playback after mic recording

--- a/app/src/main/res/layout/activity_sample_edit.xml
+++ b/app/src/main/res/layout/activity_sample_edit.xml
@@ -27,6 +27,31 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@id/my_toolbar"/>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_below="@id/my_toolbar"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_margin="4dp">
+        <TextView android:id="@+id/filename_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/text_primary_light"/>
+        <TextView android:id="@+id/sample_rate_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/text_primary_light"/>
+        <TextView android:id="@+id/sample_length_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/text_primary_light"/>
+        <TextView android:id="@+id/sample_size_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/text_primary_light"/>
+    </LinearLayout>
 
     <!-- Touchpad Toolbar-->
     <LinearLayout android:id="@+id/pad_toolbar"
