--- a/app/src/main/res/layout/activity_store.xml
+++ b/app/src/main/res/layout/activity_store.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.nakedape.mixmaticlooppad.StoreActivity"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -100,7 +101,7 @@
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-        <ListView android:id="@+id/purchases_listview"
+    <ListView android:id="@+id/purchases_listview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
@@ -109,6 +110,13 @@
             android:visibility="gone"/>
 </RelativeLayout>
     </android.support.design.widget.CoordinatorLayout>
+    <com.google.android.gms.ads.AdView android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        ads:adSize="SMART_BANNER"
+        ads:adUnitId="@string/store_activity_banner_ad_id"
+        android:visibility="gone"/>
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
