--- a/app/src/main/res/menu/menu_launch_pad_activity.xml
+++ b/app/src/main/res/menu/menu_launch_pad_activity.xml
@@ -23,6 +23,9 @@
     <item android:id="@+id/action_clear_pads"
         android:title="@string/action_clear_pads"
         app:showAsAction="never"/>
+    <item android:id="@+id/action_reset_demo"
+        android:title="@string/action_reset_demo"
+        app:showAsAction="never"/>
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="100"
