--- a/app/src/main/res/layout/loading_screen.xml
+++ b/app/src/main/res/layout/loading_screen.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
         android:layout_gravity="center_horizontal"
-        android:src="@mipmap/ic_launcher" />
+        android:src="@drawable/ic_app_icon" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -21,6 +21,7 @@
         android:text="@string/mixmatic"
         android:id="@+id/textView"
         android:layout_gravity="center_horizontal"
+        android:textColor="@color/text_primary_light"
         android:textSize="48sp" />
 
     <TextView
@@ -29,6 +30,7 @@
         android:text="@string/loop_pad"
         android:id="@+id/textView2"
         android:layout_gravity="center_horizontal"
+        android:textColor="@color/text_primary_light"
         android:textSize="36sp" />
 
     <ProgressBar
