--- a/app/src/main/res/layout/no_network_overlay.xml
+++ b/app/src/main/res/layout/no_network_overlay.xml
@@ -7,6 +7,8 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:orientation="vertical"
         android:layout_centerInParent="true">
         <TextView
