--- a/app/src/main/res/menu/menu_launch_pad_activity.xml
+++ b/app/src/main/res/menu/menu_launch_pad_activity.xml
@@ -30,6 +30,10 @@
         android:title="@string/action_settings"
         android:orderInCategory="100"
         app:showAsAction="never" />
+    <item android:id="@+id/action_privacy_policy"
+        android:title="@string/action_privacy_policy"
+        android:orderInCategory="101"
+        app:showAsAction="never"/>
     <item android:id="@+id/action_reset"
         android:title="@string/action_reset"
         android:visible="false"
