--- a/app/src/main/res/layout/prompt_create_account.xml
+++ b/app/src/main/res/layout/prompt_create_account.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black_overlay">
+    android:id="@+id/create_account_popup">
 <LinearLayout
     android:orientation="vertical"
     android:layout_width="wrap_content"
@@ -25,6 +25,15 @@
         android:layout_marginTop="8dp"
         android:textColor="@color/text_primary_light"
         android:text="@string/account_explanation"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:layout_gravity="end"
+        android:textColor="@color/blue"
+        android:text="@string/privacy_policy_underlined"
+        android:clickable="true"
+        android:onClick="ShowPrivacyPolicyPopup"/>
     <CheckBox android:id="@+id/checkbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -37,20 +46,20 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="8dp">
-        <Button android:id="@+id/yes_button"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:background="@drawable/rounded_corner_accent"
-            android:text="@string/yes"/>
         <Button android:id="@+id/no_button"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:background="@drawable/rounded_corner_primary_dark"
             android:text="@string/no_thanks"/>
+        <Button android:id="@+id/yes_button"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:background="@drawable/rounded_corner_accent"
+            android:text="@string/yes"/>
     </LinearLayout>
 </LinearLayout>
 
