--- a/app/src/main/res/layout/store_action_bar_custom_view.xml
+++ b/app/src/main/res/layout/store_action_bar_custom_view.xml
@@ -9,6 +9,8 @@
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:textColor="@color/text_primary_light"
