--- a/app/src/main/res/layout/store_sample_pack_item.xml
+++ b/app/src/main/res/layout/store_sample_pack_item.xml
@@ -17,8 +17,7 @@
 <LinearLayout
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center_vertical">
+    android:layout_height="wrap_content">
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -42,8 +41,7 @@
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_gravity="center_vertical">
+        android:orientation="vertical">
         <TextView android:id="@+id/bpm_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -51,6 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         <TextView android:id="@+id/details_view"
+            android:textSize="14sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </LinearLayout>
