--- a/app/src/main/res/layout-land/activity_launch_pad.xml
+++ b/app/src/main/res/layout-land/activity_launch_pad.xml
@@ -436,23 +436,23 @@
                 android:layout_height="wrap_content"
                 android:padding="8dp"
                 android:orientation="horizontal">
-                <TextView android:id="@+id/my_samples_button"
-                    android:layout_width="0dp"
-                    android:layout_weight="10"
-                    android:layout_height="wrap_content"
-                    android:text="@string/my_samples_underlined"
-                    android:textSize="16sp"
-                    android:textColor="@color/text_primary_light"
-                    android:onClick="MySamplesClick"
-                    android:clickable="true"/>
                 <TextView android:id="@+id/sample_packs_button"
                     android:layout_width="0dp"
                     android:layout_weight="12"
                     android:layout_height="wrap_content"
-                    android:text="@string/sample_packs"
+                    android:text="@string/sample_packs_underlined"
                     android:textSize="16sp"
                     android:textColor="@color/text_primary_light"
                     android:onClick="SamplePacksClick"
+                    android:clickable="true"/>
+                <TextView android:id="@+id/my_samples_button"
+                    android:layout_width="0dp"
+                    android:layout_weight="10"
+                    android:layout_height="wrap_content"
+                    android:text="@string/my_samples"
+                    android:textSize="16sp"
+                    android:textColor="@color/text_primary_light"
+                    android:onClick="MySamplesClick"
                     android:clickable="true"/>
             </LinearLayout>
             <TextView android:id="@+id/sample_pack_empty_view"
@@ -471,7 +471,7 @@
                 android:textSize="20sp"
                 android:textAlignment="center"
                 android:background="@drawable/rounded_corner_accent"
-                android:visibility="gone"
+                android:visibility="visible"
                 android:onClick="OpenStore"
                 android:clickable="true"/>
             <TextView android:id="@+id/new_sample_button"
@@ -490,22 +490,20 @@
                 android:textSize="20sp"
                 android:textAlignment="center"
                 android:background="@drawable/rounded_corner_accent"
-                android:visibility="visible"
+                android:visibility="gone"
                 android:onClick="AddSampleClick"
                 android:clickable="true"/>
             <ListView android:id="@+id/sample_listview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/new_sample_button"
-                android:layout_weight="1"
                 android:choiceMode="singleChoice"
-                android:visibility="visible"/>
+                android:visibility="gone"/>
             <ListView android:id="@+id/sample_pack_listview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/sample_pack_empty_view"
-                android:layout_weight="1"
-                android:visibility="gone"/>
+                android:visibility="visible"/>
             <LinearLayout android:id="@+id/selected_pack_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
